# OpenPhotosense

./: .dockerignore  .env.example  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
backend/: __init__.py  config.py  jobs.py  main.py  schemas.py
docs/: api.md  architecture.md  detection.md
examples/: sample-report.json
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auto-fix.tsx  results.tsx  theme-toggle.tsx  upload-zone.tsx  video-preview.tsx
frontend/lib/: api.ts  browser-fixer.ts  browser-scanner.ts  types.ts
scanner/: __init__.py  cli.py  detectors.py  engine.py  fixer.py  models.py
scripts/: run_backend.py
tests/: test_api.py  test_detectors.py  test_engine.py  test_fixer.py
