[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "openphotosense"
version = "0.1.0"
description = "Open video analysis for potential photosensitive seizure triggers"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["backend*", "scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"backend/schemas.py" = ["UP007"]
